--- a/experiments/mpii/hrnet/w32_256x256_adam_lr1e-3.yaml
+++ b/experiments/mpii/hrnet/w32_256x256_adam_lr1e-3.yaml
@@ -3,8 +3,8 @@ CUDNN:
   BENCHMARK: true
   DETERMINISTIC: false
   ENABLED: true
-DATA_DIR: ''
-GPUS: (0,1,2,3)
+DATA_DIR: 'data'
+GPUS: (0,)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
 WORKERS: 24
@@ -17,7 +17,7 @@ DATASET:
   FLIP: true
   NUM_JOINTS_HALF_BODY: 8
   PROB_HALF_BODY: -1.0
-  ROOT: 'data/mpii/'
+  ROOT: 'mpii'
   ROT_FACTOR: 30
   SCALE_FACTOR: 0.25
   TEST_SET: valid
